fix mobile horizontal scroll

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -32,6 +32,10 @@ ul.selectpicker {
   }
 }
 
+.mobile-device {
+  width: auto !important;
+}
+
 .alert {
   width: 100%;
   background-color: #632523;
